src/css/style.css
:root {
  --rad-l: 10px;
  --rad-m: 5px;

  --clr-white: white;
  --clr-black: black;
}

*,
*::after,
*::before {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  font-family: Arial, Helvetica, sans-serif;
  font-size: 16px;
  background-color: #f1f1f1;
  color: slategrey;
}

.app {
  padding: 10px 0;
}

/* Interface */

.game-container {
  display: flex;
  flex-direction: row;
  width: fit-content;
  margin: 0 auto;
  padding: 20px;
  border-radius: var(--rad-l);
  background-color: white;
  box-shadow: 1px 1px 4px 1px #acb2c2;
}

.controls {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-between;
  margin-left: 20px;
  width: 150px;
}

.next-shape-container {
  width: 96px;
  height: 96px;
  border-radius: var(--rad-m);
  display: flex;
  justify-content: center;
  align-items: center;
}

.btn-container {
  display: flex;
  flex-direction: column;
  gap: 10px;
  width: 80%;
}

.btn {
  padding: 8px 0;
  background-color: #e6e6e6;
  border: 1px solid lightgray;
  border-radius: var(--rad-m);
  font-size: 1rem;
  cursor: pointer;
  transition: background-color 0.2s;
}

.btn:hover {
  background-color: gold;
}

.btn:active {
  background-color: goldenrod;
}

/* Game board */

.game-board-container {
  position: relative;
}

.game-board {
  /* position: relative; */
  background-color: #d2cfec;
  border-radius: var(--rad-m);
}

/* Block */

.blocks-row {
  position: absolute;
  transition: 0.8s ease-in;
}

.block {
  position: absolute;
  width: 24px;
  height: 24px;
  border: 3px solid #474747;
  border-radius: var(--rad-m);
}

.block-0 {
  border-color: #cdc9eb;
  background-color: transparent;
}
.block-1 {
  background-color: #ff9797;
}
.block-2 {
  background-color: #ffec43;
}
.block-3 {
  background-color: #26ff2f;
}
.block-4 {
  background-color: #32daff;
}
.block-5 {
  background-color: #fc6fff;
}

/* Shape */

.shape-container {
  position: absolute;
}

.shape {
  position: absolute;
}

/* Pop-up */

.popup-container {
  position: absolute;
  top: 0;
  left: 0;
  width: 100vw;
  height: 100vh;
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: #32323280;
}

.popup {
  width: 220px;
  height: 180px;
  padding: 20px 20px;
  background-color: #fff;
  border-radius: var(--rad-l);
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

